--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,7 @@
     content: " *";
     color: red;
 }
+.flatpickr-input {
+    background-color: white !important;
+    color: black !important;
+}
